--- a/_posts/2017-12-22-ohmyzsh.md
+++ b/_posts/2017-12-22-ohmyzsh.md
@@ -5,4 +5,4 @@ excerpt:
 published: true
 date: 2017-12-22 22:02:23
 ---
-Vrijdagavond is een prima moment om wat te klooien met eigen projectjes. Of dat nu een blogpost is of uitvogelen hoe ik makkelijker en meer met de commandline kan doen. Zojuist eens gedoken in [Oh My ZSH](https://www.smashingmagazine.com/2015/07/become-command-line-power-user-oh-my-zsh-z/}, een fraaie toevoeging op de alternatieve OSX terminal [iTerm2](https://www.iterm2.com/features.html)
+Vrijdagavond is een prima moment om wat te klooien met eigen projectjes. Of dat nu een blogpost is of uitvogelen hoe ik makkelijker en meer met de commandline kan doen. Zojuist eens gedoken in [Oh My ZSH](https://www.smashingmagazine.com/2015/07/become-command-line-power-user-oh-my-zsh-z/), een fraaie toevoeging op de alternatieve OSX terminal [iTerm2](https://www.iterm2.com/features.html)
