--- a/_posts/2018-02-25-tweet.md
+++ b/_posts/2018-02-25-tweet.md
@@ -1,9 +1,14 @@
 ---
-layout: tweet
+layout: post
 title: test twitter ding
 date: 2018-02-25T150615CET
 excerpt:
-published: false
+published: true
 header:
+tweet: true
 ---
+<div class="h-entry"><p class="e-content">
 Hier dan iets met een tweet.
+</p></div>
+
+<a href="https://brid.gy/publish/twitter"></a>
